<resources>
    <string name="app_name">AndroidKTX</string>
    <string name="add">Add</string>
    <string name="name">Name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="user_detail">User Detail</string>
    <string name="description">Description:</string>
    <string name="price">Price</string>
</resources>