<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/CornflowerBlue"
            app:endIconMode="clear_text"
            app:startIconContentDescription="You name"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_dialog_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/e_mail"
            app:boxBackgroundColor="@color/CornflowerBlue"
            app:endIconMode="clear_text"
            app:startIconContentDescription="You email"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_dialog_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:layout_marginTop="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/user" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_dialog_save_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/CornflowerBlue"
            android:layout_marginTop="50dp"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>

</layout>